docs/tests/parser/control_flow/invalid/IfBodyMissingCloseBrace.b
fn void test() {
    if (true) {
        let int x = 5;
}
